# hedge-fund-tracker

./: .env.example  .gitignore  README.md  README_DASHBOARD.md  docker-compose.yml  pyproject.toml  utils.py
.github/workflows/: ci.yml  update.yml
analytics/: concentration.py  consensus.py  crowding.py  delta_engine.py  jaccard.py  runner.py  sector_weights.py
config/: fund_list.csv  logging.py  settings.py
dashboard/: app.py  data_access.py  theme.py
dashboard/components/: charts.py  data_quality_badge.py  disclaimer.py  filters.py  kpi_cards.py
dashboard/utils/: exporters.py  formatters.py  quarters.py
dashboard/views/: compare_funds.py  consensus_view.py  crowding_leaderboard.py  fund_drill.py  fund_ranking.py  heatmap.py  options_view.py  overview.py  stock_drill.py
db/: engine.py  models.py
db/migrations/: env.py
db/migrations/versions/: 19f7464942c5_initial_migration.py  349de66ae8f1_add_etl_runs_table.py  456edea1a8de_add_weight_change_pct_to_holding_deltas.py  8444b2b9cb4c_initial_schema.py  c0a4f1d2e3b5_add_concentration_analytics.py
etl/: amendment_handler.py  cusip_resolver.py  fetcher.py  mock_data.py  parser.py  pipeline.py  stock_map.py
scheduler/: cron_job.py
scripts/: backfill.py  init_db.py  run_full_pipeline.py  seed_funds.py  update_tickers.py
tests/: conftest.py  test_analytics_e2e.py  test_consensus.py  test_crowding.py  test_delta.py  test_e2e.py  test_fetcher.py  test_jaccard.py  test_parser.py
