[project]
name = "hedge-fund-tracker"
version = "0.1.0"
description = "13F Hedge Fund Holdings Tracking & Analytics System"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "polars>=1.0",
    "pandas>=2.2",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "streamlit>=1.35",
    "plotly>=5.22",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "loguru>=0.7",
    "schedule>=1.2",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
